# naiiveBayes

./: README.md
naivebayes-jjmaddila2-master/: CMakeLists.txt  NativeBaynes.cpp  Prob.hpp  Probailty.cpp  README.md
naivebayes-jjmaddila2-master/Test/: test_suite.cpp
naivebayes-jjmaddila2-master/data/: README.md  vector
naivebayes-jjmaddila2-master/src/: NativeBaynes.cpp  Prob.hpp  Probailty.cpp  Test.cpp  main.cpp  test.hpp
